--- a/index.html
+++ b/index.html
@@ -12,26 +12,11 @@ permalink: /
         <div class="block">
           <h1 class="animated fadeInUp">A blend of hardware and software.</h1>
           <p class="animated fadeInUp">Currently, we are operating in stealth mode.</p>
+          <a class="btn btn-default btn-call-to-action" href="#" >Get in touch.</a>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
 
 {% include footer.html %}
