--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
         <div class="block">
           <h1 class="animated fadeInUp">A blend of hardware and software.</h1>
           <p class="animated fadeInUp">Currently, we are operating in stealth mode.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Get in touch.</a>
+          <a class="btn btn-default btn-call-to-action" href="mailto:hello@outpaced.ai" >Get in touch.</a>
         </div>
       </div>
     </div>
